syntax = "proto3";
package calculator;
option go_package = "calcpb";

message Sum {
    int64 num1 = 1;
    int64 num2 = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int64 result = 1;
}

message DecomposeRequest {
    int64 number = 1;
}

message DecomposeResponse {
    int64 result = 1;
}

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    float result = 1;
}

service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse);
    rpc Decompose (DecomposeRequest) returns (stream DecomposeResponse);
    rpc Average (stream AverageRequest) returns (AverageResponse);
}